fix: change .wrap height

--- a/source/style/scss/config/_baseLayout.scss
+++ b/source/style/scss/config/_baseLayout.scss
@@ -10,9 +10,9 @@ body{
     max-width: 2048px;
     padding: 1rem 1rem .5rem 1rem;
     @include rwd(320){
-        max-height: 75vh;
+        height: 75vh;
     }
     @include rwd(768){
-        max-height: 85vh;
+        height: 83vh;
     }
 }
